tests/specs/ecosystem/schematicos/rtk_query/0_0_3.test
schematicos/rtk-query/0.0.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@schematicos/codegen@0.0.12": "jsr:@schematicos/codegen@0.0.12",
      "jsr:@std/assert@^0.223.0": "jsr:@std/assert@0.223.0",
      "jsr:@std/path@0.223.0": "jsr:@std/path@0.223.0",
      "npm:openapi-types@12.1.3": "npm:openapi-types@12.1.3",
      "npm:prettier@3.2.5": "npm:prettier@3.2.5",
      "npm:tiny-invariant@1.3.3": "npm:tiny-invariant@1.3.3",
      "npm:ts-pattern@5.1.1": "npm:ts-pattern@5.1.1",
      "npm:zod@3.23.4": "npm:zod@3.23.4"
    },
    "jsr": {
      "@schematicos/codegen@0.0.12": {
        "integrity": "df4da559fbfa3ab2db031217e3ca98860db80e61a4e173ba8a96027250bbb2f7",
        "dependencies": [
          "jsr:@std/path@0.223.0",
          "npm:openapi-types@12.1.3",
          "npm:prettier@3.2.5",
          "npm:tiny-invariant@1.3.3",
          "npm:ts-pattern@5.1.1",
          "npm:zod@3.23.4"
        ]
      },
      "@std/assert@0.223.0": {
        "integrity": "eb8d6d879d76e1cc431205bd346ed4d88dc051c6366365b1af47034b0670be24"
      },
      "@std/path@0.223.0": {
        "integrity": "593963402d7e6597f5a6e620931661053572c982fc014000459edc1f93cc3989",
        "dependencies": [
          "jsr:@std/assert@^0.223.0"
        ]
      }
    },
    "npm": {
      "openapi-types@12.1.3": {
        "integrity": "sha512-N4YtSYJqghVu4iek2ZUvcN/0aqH1kRDuNqzcycDxhOUpg7GdvLa2F3DgS6yBNhInhv2r/6I0Flkn7CqL8+nIcw==",
        "dependencies": {}
      },
      "prettier@3.2.5": {
        "integrity": "sha512-3/GWa9aOC0YeD7LUfvOG2NiDyhOWRvt1k+rcKhOuYnMY24iiCphgneUfJDyFXd6rZCAnuLBv6UeAULtrhT/F4A==",
        "dependencies": {}
      },
      "tiny-invariant@1.3.3": {
        "integrity": "sha512-+FbBPE1o9QAYvviau/qC5SE3caw21q3xkvWKBtja5vgqOWIHHJ3ioaq1VPfn/Szqctz2bU/oYeKd9/z5BL+PVg==",
        "dependencies": {}
      },
      "ts-pattern@5.1.1": {
        "integrity": "sha512-i+owkHr5RYdQxj8olUgRrqpiWH9x27PuWVfXwDmJ/n/CoF/SAa7WW1i2oUpPDMQpJ4U+bGRUcZkVq7i1m3zFCg==",
        "dependencies": {}
      },
      "zod@3.23.4": {
        "integrity": "sha512-/AtWOKbBgjzEYYQRNfoGKHObgfAZag6qUJX1VbHo2PRBgS+wfWagEY2mizjfyAPcGesrJOcx/wcl0L9WnVrHFw==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /mod.ts:6:7
  | 
6 | const transform = ({ context, transformerSettings }: TransformerArgs) => {
  |       ^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


